# vocalnet

./: .gitignore  README.md  pyproject.toml  requirements.txt
cosyvoice/cli/: cosyvoice.py  frontend.py  model.py
cosyvoice/flow/: flow.py  flow_matching.py
omni_speech/: arguments.py  constants.py  conversation.py  merge_lora_model.py  utils.py
omni_speech/datasets/: datasets.py  preprocess.py
omni_speech/infer/: specdiff.py  vocalnet.py  vocalnet_streaming.py
omni_speech/model/: __init__.py  builder.py  omni_speech_arch.py
omni_speech/model/language_model/: omni_speech2s_llama.py  omni_speech2s_qwen2.py  omni_speech_llama.py  omni_speech_qwen2.py
omni_speech/model/speech_encoder/: builder.py  speech_encoder.py
omni_speech/model/speech_generator/: builder.py  speech_generator.py  speech_generator_ar.py  speech_generator_ar_mtp.py
omni_speech/model/speech_tokenizer/: configuration_whisper.py  modeling_whisper.py  modeling_whisper_streaming.py  utils.py
omni_speech/train/: magicomni_trainer.py  train_mem.py  train_tdm.py
scripts/mtp/: ar_config_5.yaml  llama_stage1_s2t.sh  llama_stage2_s2s.sh  qwen_ar_config_5.yaml  qwen_stage1_s2t.sh  qwen_stage2_s2s.sh
sdresults/: analysis_report.txt  summary_by_k.csv
sdresults/mtp/1m/: analysis_report_mtp.txt  results_mtp.csv
sdresults/mtp/2m/: analysis_report_mtp.txt  results_mtp.csv
sdresults/mtp/3m/: results_mtp.csv  (+1 more)
sdresults/non_mtp/: audio_acceptance_results.csv
test_sd/: test.py  testmtp.py  vocalnet_speculative_decoding.py  vocalnet_speculative_decoding_mtp.py
view_model/: ddp.sh  view.py  view2.py  view3.py
(+4 files in other folders)
