[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vocalnet"
version = "1.0.0"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "bitsandbytes==0.43.1",
    "einops==0.8.1",
    "funasr==1.2.6",
    "HyperPyYAML==1.2.2",
    "inflect==7.3.1",
    "ipdb==0.13.13",
    "librosa==0.10.2",
    "matcha==0.3",
    "matplotlib==3.10.1",
    "numpy==1.26.4",
    "omegaconf==2.3.0",
    "onnxruntime_gpu==1.18.0",
    "openai_whisper==20240930",
    "packaging==24.2",
    "pandas==2.2.3",
    "peft==0.11.1",
    "Pillow==11.2.1",
    "pyarrow==19.0.0",
    "PyYAML==6.0.2",
    "safetensors==0.5.3",
    "scipy==1.15.2",
    "seaborn==0.13.2",
    "shortuuid==1.0.13",
    "soundfile==0.13.0",
    "tiktoken==0.8.0",
    "tqdm==4.67.1",
    "transformers==4.43.4",
    "WeTextProcessing==1.0.3",
    "tokenizers==0.19.1",
    "huggingface_hub==0.25.0",
    "matcha-tts",
    "shortuuid",
]

[project.optional-dependencies]
train = [
    "deepspeed==0.12.6",
    "ninja",
    "wandb",
    "tensorboardX"
]
build = [
    "build",
    "twine"
]

[tool.setuptools.packages.find]
exclude = [
    "data",
    "checkpoints",
    "logs",
    "models",
    "fairseq",
    "flash-attention"
]

[tool.wheel]
exclude = [
    "data",
    "checkpoints",
    "logs",
    "models",
    "fairseq",
    "flash-attention"
]
